common/knative/knative-serving/base/patches/seccomp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: placeholder
  namespace: knative-serving
spec:
  template:
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
