common/knative/knative-serving/base/patches/sidecar-injection.yaml
patches:
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "*"
spec:
  template:
    metadata:
      labels:
        sidecar.istio.io/inject: "true"
      annotations:
        sidecar.istio.io/inject: "true"
