common/knative/knative-serving/base/patches/remove-gateway.yaml
$patch: delete
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: knative-ingress-gateway
  namespace: knative-serving
